crates/stepflow-execution/tests/snapshots/test_execution__run_tests@error_use_default_value.yaml.snap
---
source: crates/stepflow-execution/tests/test_execution.rs
description: case 0
expression: result
info: {}
input_file: crates/stepflow-execution/tests/flows/error_use_default_value.yaml
---
status: success
result:
  error_result: using default value
