crates/stepflow-execution/tests/snapshots/test_execution__run_tests@flow_result_types.yaml-2.snap
---
source: crates/stepflow-execution/tests/test_execution.rs
description: case 1
expression: result
info:
  mode: skip
input_file: crates/stepflow-execution/tests/flows/flow_result_types.yaml
---
status: skipped
