crates/stepflow-execution/tests/snapshots/test_execution__run_tests@flow_result_types.yaml.snap
---
source: crates/stepflow-execution/tests/test_execution.rs
description: case 0
expression: result
info:
  mode: success
input_file: crates/stepflow-execution/tests/flows/flow_result_types.yaml
---
status: success
result:
  downstream_result: downstream_success
  main_result: success
