crates/stepflow-execution/tests/snapshots/test_execution__run_tests@python_math.yaml.snap
---
source: crates/stepflow-execution/tests/test_execution.rs
description: case 0
expression: result
info:
  m: 8
  n: 5
input_file: crates/stepflow-execution/tests/flows/python_math.yaml
---
m_times_n: 40
m_plus_n: 13
m_plus_n_times_n: 65
